infrastructure/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convo-upload
  labels:
    app: convo-upload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: convo-upload
  template:
    metadata:
      labels:
        app: convo-upload
    spec:
      containers:
        - name: convo-upload
          image: us-east4-docker.pkg.dev/group31-project-2025-451402/conversation-management/convo-upload:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convo-summary
  labels:
    app: convo-summary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: convo-summary
  template:
    metadata:
      labels:
        app: convo-summary
    spec:
      containers:
        - name: convo-summary
          image: us-east4-docker.pkg.dev/group31-project-2025-451402/conversation-management/convo-summary:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "2Gi"
              cpu: "250m"
              ephemeral-storage: "5Gi"
            limits:
              memory: "3Gi"
              cpu: "500m"
              ephemeral-storage: "7Gi"
