infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: convo-upload-service
  annotations:
    cloud.google.com/backend-config: '{"default": "convo-upload-backend-config"}'
spec:

  selector:
    app: convo-upload
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 
  
---
apiVersion: v1
kind: Service
metadata:
  name: convo-summary-service
  annotations:
    cloud.google.com/backend-config: '{"default": "convo-summary-backend-config"}'
spec:
  selector:
    app: convo-summary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
