infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: convo-ingress
  annotations:
    networking.gke.io/managed-certificates: "convo-managed-cert"
    kubernetes.io/ingress.global-static-ip-name: "convo-api-ip"
    kubernetes.io/ingress.class: "gce"  
    cloud.google.com/backend-config: '{"default": "convo-summary-backend-config", "convo-upload-service": "convo-upload-backend-config", "convo-summary-service": "convo-summary-backend-config"}'
spec:
  ingressClassName: gce
  rules:
  - host: group31-smartglasses-2025-api.net
    http:
      paths:
      - path: /store
        pathType: Prefix
        backend:
          service:
            name: convo-upload-service
            port:
              number: 80
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: convo-upload-service
            port:
              number: 80
      - path: /summarize
        pathType: Prefix
        backend:
          service:
            name: convo-summary-service
            port:
              number: 80

      - path: /health
        pathType: Prefix
        backend:
          service:
            name: convo-summary-service
            port:
              number: 80
